[package]
name = "mercator_indexer"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Generate test data for Mercator"
#homepage = "https://crates.io/crates/mercator_data_generator"
repository = "https://github.com/epfl-dias/mercator_data_generator"
readme = "README.md"

keywords = []
categories = [ ]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[profile.release]
lto = true

[dependencies]
measure_time = "0.6"
mercator_db = "0.1"

# Online help & argument parsing
clap = {version = "2.33", features = ["wrap_help"]}
structopt = "0.3"

# Logging macros API
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "0.3" # Logger implementation

[workspace]

[patch.crates-io]
mercator_db = { path = "../mercator_db" }
ironsea_index = { path = "../ironsea_index" }

ironsea_index_hashmap = { path = "../ironsea_index_hashmap" }
ironsea_index_sfc_dbc = { path = "../ironsea_index_sfc_dbc" }
